--- a/pirate.html
+++ b/pirate.html
@@ -76,7 +76,7 @@
 
         <div class="row" style="padding-left: 150px;">
 
-            <div class="col-md-2"><img id="0" onclick="check(0)" src="bones.png" alt="treasure"
+            <div class="col-md-2"><img id="0" onclick="check(0)" src="ti.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -84,7 +84,7 @@
 
                     style="width: 100px;height:100px;"></div>
 
-            <div class="col-md-2"><img id="2" onclick="check(2)" src="ti.png" alt="treasure"
+            <div class="col-md-2"><img id="2" onclick="check(2)" src="bones.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -100,7 +100,7 @@
 
         <div class="row" style="padding-left: 150px;">
 
-            <div class="col-md-2"><img id="5" onclick="check(5)" src="bones.png" alt="treasure"
+            <div class="col-md-2"><img id="5" onclick="check(5)" src="ti.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -108,7 +108,7 @@
 
                     style="width: 100px;height:100px;"></div>
 
-            <div class="col-md-2"><img id="7" onclick="check(7)" src="ti.png" alt="treasure"
+            <div class="col-md-2"><img id="7" onclick="check(7)" src="bones.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -124,7 +124,7 @@
 
         <div class="row" style="padding-left: 150px;">
 
-            <div class="col-md-2"><img id="10" onclick="check(10)" src="bones.png" alt="treasure"
+            <div class="col-md-2"><img id="10" onclick="check(10)" src="ti.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -132,7 +132,7 @@
 
                     style="width: 100px;height:100px;"></div>
 
-            <div class="col-md-2"><img id="12" onclick="help()" src="ti.png" alt="treasure"
+            <div class="col-md-2"><img id="12" onclick="help()" src="bones.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -148,7 +148,7 @@
 
         <div class="row" style="padding-left: 150px;">
 
-            <div class="col-md-2"><img id="15" onclick="check(15)" src="bones.png" alt="treasure"
+            <div class="col-md-2"><img id="15" onclick="check(15)" src="ti.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -156,7 +156,7 @@
 
                     style="width: 100px;height:100px;"></div>
 
-            <div class="col-md-2"><img id="17" onclick="check(17)" src="ti.png" alt="treasure"
+            <div class="col-md-2"><img id="17" onclick="check(17)" src="bones.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -172,7 +172,7 @@
 
         <div class="row" style="padding-left: 150px;">
 
-            <div class="col-md-2"><img id="20" onclick="check(20)" src="bones.png" alt="treasure"
+            <div class="col-md-2"><img id="20" onclick="check(20)" src="ti.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
@@ -180,7 +180,7 @@
 
                     style="width: 100px;height:100px;"></div>
 
-            <div class="col-md-2"><img id="22" onclick="check(22)" src="ti.png" alt="treasure"
+            <div class="col-md-2"><img id="22" onclick="check(22)" src="bones.png" alt="treasure"
 
                     style="width: 100px;height:100px;"></div>
 
